Categories List And Carousel Added

--- a/index.html
+++ b/index.html
@@ -86,9 +86,29 @@
   </div>
 </div>
 <!-- header ended -->
+<!-- main content started -->
+<div class="dummy"></div>
+
+<div class="categories-list">
+  <div class="categories">
+    ALL CATEGORIES
+    <img src="images/dropdownarrow.svg" alt="" />
+  </div>
+  <a href="#">Mobile Phones</a>
+  <a href="#">Cars</a>
+  <a href="#">Motercycles</a>
+  <a href="#">Houses</a>
+  <a href="#">Video-Audios</a>
+  <a href="#">Tablets</a>
+  <a href="#">Land & Plots</a>
+</div>
 
 
+  <div class="carousel">
+    <img src="images/sprite.jpeg" alt="">
+  </div>
 
+<!-- main content ended -->
 </body>
 
 </html>
