OLX Website Done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OLX</title>
+
   <link rel="stylesheet" href="style.css">
 </head>
 <!-- header started -->
@@ -52,7 +53,7 @@
   </div>
   <div class="nav-2">
     <div class="location">
-      <img src="images/loc-icon.svg" alt="" class="hover">
+      <img src="images/loc-icon.svg" alt="" class="hover" />
       <select style="width: 150px; -webkit-appearance: none;">
         <option>Gurumandir, Karachi</option>
         <option>Tariq Road, Karachi</option>
@@ -90,7 +91,7 @@
 <div class="dummy"></div>
 
 <div class="categories-list">
-  <div class="categories">
+  <div class="categories hover">
     ALL CATEGORIES
     <img src="images/dropdownarrow.svg" alt="" />
   </div>
@@ -104,11 +105,638 @@
 </div>
 
 
-  <div class="carousel">
-    <img src="images/sprite.jpeg" alt="">
+
+<div class="option">
+  <h2>All Categories</h2>
+  <div class="option-categories">
+    <div class="opt-1 hover">
+      <img src="images/phone.png" alt="">
+      <h4>Mobiles</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/vehicle.png" alt="">
+      <h4>Vehicles</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/house.png" alt="">
+      <h4>Property For Sale</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/keys.png" alt="">
+      <h4>Property For Rent</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/camera.png" alt="">
+      <h4>Electronics & Home Appliances</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/bikes.png" alt="">
+      <h4>Bikes</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/tractor.png" alt="">
+      <h4>Business, Industrial & Agriculture</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/paint.png" alt="">
+      <h4>Services</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/jobs.png" alt="">
+      <h4>Jobs</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/chicken.png" alt="">
+      <h4>Animals</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/furniture.png" alt="">
+      <h4>Furniture & Home Decor</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/fashion.png" alt="">
+      <h4>Fashion & Beauty</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/books.png" alt="">
+      <h4>Books, Sports & Hobbies</h4>
+    </div>
+    <div class="opt-1 hover">
+      <img src="images/toys.png" alt="">
+      <h4>Kids</h4>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+<div class="product">
+  <div class="heading">
+    <h1>Cars</h1>
+    <span>View More &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" class="_2e0d1516"
+        viewBox="0 0 32 32">
+        <path
+          d="M7.55 3.36c-.8-.8-.7-2.1.1-2.8.8-.7 2-.7 2.7 0l14 14c.8.8.8 2 0 2.8l-14 14c-.8.8-2 .8-2.8.1-.8-.8-.8-2-.1-2.8l.1-.1 12.6-12.5-12.6-12.7z">
+        </path>
+      </svg> </span>
+  </div>
+  <div class="pro-1">
+    <div class="choose special">
+      <img src="images/car-5.jpeg" alt="">
+        <div class="price">
+          <h4>$500,000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Rolls Royce</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose">
+      <img src="images/car-6.jpg" alt="">
+        <div class="price">
+          <h4>$200,000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Tesla</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose">
+      <img src="images/car-7.jpg" alt="">
+        <div class="price">
+          <h4>$300,000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Merceds Maybach S580</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose">
+      <img src="images/car-8.avif" alt="">
+        <div class="price">
+          <h4>$275,00</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>BMW i7</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose special">
+      <img src="images/car-9.webp" alt="">
+        <div class="price">
+          <h4>$350,000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Mercedes Benz</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+      </div>
+    </div>
+    <div class="choose-1 choose">
+      <img src="images/car-10.webp" alt="">
+        <div class="price">
+          <h4>$10,000,000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Bughatti Chiron</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose">
+      <img src="images/car-11.avif" alt="">
+        <div class="price">
+          <h4>$250,000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Lamborghini Urus</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose">
+      <img src="images/car-5.jpeg" alt="">
+        <div class="price">
+          <h4>$500,000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Rolls Royce</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
   </div>
 
+
+
+
+
+
+
+
+
+
+
+  <div class="heading">
+    <h1>Mobiles</h1>
+    <span>View More &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" class="_2e0d1516"
+        viewBox="0 0 32 32">
+        <path
+          d="M7.55 3.36c-.8-.8-.7-2.1.1-2.8.8-.7 2-.7 2.7 0l14 14c.8.8.8 2 0 2.8l-14 14c-.8.8-2 .8-2.8.1-.8-.8-.8-2-.1-2.8l.1-.1 12.6-12.5-12.6-12.7z">
+        </path>
+      </svg> </span>
+  </div>
+  <div class="pro-1">
+    <div class="choose special">
+      <img src="images/phone-3.webp" alt="">
+        <div class="price">
+          <h4>$1500</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Samsung S23 Ultra</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose">
+      <img src="images/phone-2.avif" alt="">
+        <div class="price">
+          <h4>$1200</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Iphone 14 Pro Max</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose">
+      <img src="images/phone-2.webp" alt="">
+        <div class="price">
+          <h4>$1400</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Iphone 15 Pro Max</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose">
+      <img src="images/phone-4.avif" alt="">
+        <div class="price">
+          <h4>$500</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Samsung Galaxy Z Fold 3</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose special">
+      <img src="images/phone-5.jpg" alt="">
+        <div class="price">
+          <h4>$3500</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Xiaomi Mi Ultra</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose">
+      <img src="images/phone-6.webp" alt="">
+        <div class="price">
+          <h4>$700</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Iphone 12 Pro Max</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose">
+      <img src="images/phone-3.webp" alt="">
+        <div class="price">
+          <h4>$1500</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Samsung Galaxy S23 Ultra</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose">
+      <img src="images/phone-2.avif" alt="">
+        <div class="price">
+          <h4>$1200</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Iphone 14 Prp Max</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <div class="heading">
+    <h1>Bikes</h1>
+    <span>View More &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" class="_2e0d1516"
+        viewBox="0 0 32 32">
+        <path
+          d="M7.55 3.36c-.8-.8-.7-2.1.1-2.8.8-.7 2-.7 2.7 0l14 14c.8.8.8 2 0 2.8l-14 14c-.8.8-2 .8-2.8.1-.8-.8-.8-2-.1-2.8l.1-.1 12.6-12.5-12.6-12.7z">
+        </path>
+      </svg> </span>
+  </div>
+  <div class="pro-1">
+    <div class="choose special">
+      <img src="images/bike-1.jpeg" alt="">
+        <div class="price">
+          <h4>$12000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Hayabusa</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose">
+
+      <img src="images/bike-3.jpg" alt="">
+        <div class="price">
+          <h4>$7000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Harley Davidson</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose">
+      <img src="images/bike-2.jpg" alt="">
+        <div class="price">
+          <h4>$10000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Kawasaki Ninja H2</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose">
+      <img src="images/bike-4.avif" alt="">
+        <div class="price">
+          <h4>$3000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Yamaha</p>
+        </div>
+        <div class="info">
+          Lahore,Punjab
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose special">
+      <img src="images/bike-5.jpg" alt="">
+        <div class="price">
+          <h4>$4000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>BMW R nineT</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose">
+      <img src="images/bike-6.jpg" alt="">
+        <div class="price">
+          <h4>$6000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Ducati Monster</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose">
+      <img src="images/bike-3.jpg" alt="">
+        <div class="price">
+          <h4>$7000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Harley Davidson</p>
+        </div>
+        <div class="info">
+          Karachi,Sindh
+          <br />
+          1 day ago
+        </div>
+    </div>
+    <div class="choose-1 choose">
+      <img src="images/bike-4.avif" alt="">
+        <div class="price">
+          <h4>$3000</h4>
+          <img src="images/heart.svg" alt="">
+        </div>
+        <div class="name">
+          <p>Yamaha</p>
+        </div>
+        <div class="info">
+          Lahore,Punjab
+          <br />
+          1 day ago
+        </div>
+    </div>
+  </div>
+</div>
+
 <!-- main content ended -->
+
+
+
+
+
+
+<!-- footer started -->
+<div class="sponsor">
+  <div class="spon-1">
+    <img src="images/olx-mob.webp" alt="">
+    <div class="text">
+      <h1>TRY THE OLX APP</h1>
+      <p>Buy, sell and find just about anything using the app on your mobile.</p>
+    </div>
+    <div class="line"></div>
+    <div class="app-icon">
+      <h4>Get Your App Today</h4>
+      <div class="icons">
+        <img src="images/app.svg" alt="" class="special-1">
+        <img src="images/google.svg" alt="">
+        <img src="images/gallery.svg" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class="footer">
+  <div class="footer-content">
+    <div class="part-1">
+      <h5>POPULAR CATEGORIES</h5>
+      <ul>
+        <li>Cars</li>
+        <li>Flats for rent</li>
+        <li>Mobile Phones</li>
+        <li>Jobs</li>
+      </ul>
+    </div>
+    <div class="part-2">
+      <h5>TRENDING SEARCHES</h5>
+      <ul>
+        <li>Bikes</li>
+        <li>Watches</li>
+        <li>Books</li>
+        <li>Dogs</li>
+      </ul>
+    </div>
+    <div class="part-3">
+      <h5>ABOUT US</h5>
+      <ul>
+        <li>About Dubizzle Group</li>
+        <li>OLX Blog</li>
+        <li>Contact Us</li>
+        <li>OLX for Businesses</li>
+      </ul>
+    </div>
+    <div class="part-4">
+      <h5>OLX</h5>
+      <ul>
+        <li>Help</li>
+        <li>Sitemap</li>
+        <li>Terms of use</li>
+        <li>Privacy Policy</li>
+      </ul>
+    </div>
+    <div class="part-5">
+      <h4>FOLLOW US</h4>
+      <div class="social">
+        <img src="images/facebook.svg" alt="" class="hover" />
+        <img src="images/insta.svg" alt="" class="hover" />
+        <img src="images/twitter.svg" alt="" class="hover" />
+        <img src="images/utube.svg"" class="hover" />
+      </div>
+      <div class="link-portion">
+        <img src="images/app.svg" alt="" class="hover" />
+        <img src="images/google.svg" alt="" class="hover" />
+        <img src="images/gallery.svg" alt="" class="hover" />
+      </div>
+    </div>
+  </div>
+</div>
+<!--last section  -->
+<div class="backk">
+<div class="copyRight">
+  Cloned By
+  <a href="#">Abdul Hannan</a>
+</div>
+</div>
+
+
+
+<!-- <div class="all-info">
+  <div class="parts">
+    <div class="p1">
+      <h5>POPULAR CATEGORIES</h5>
+      <ul>
+        <li>Cars</li>
+        <li>Flats for rent</li>
+        <li>Mobile Phones</li>
+        <li>Jobs</li>
+      </ul>
+    </div>
+    <div class="p2">
+      <h5>TRENDING SEARCHES</h5>
+      <ul>
+        <li>Bikes</li>
+        <li>Watches</li>
+        <li>Books</li>
+        <li>Dogs</li>
+      </ul>
+    </div>
+    <div class="p3">
+      <h5>ABOUT US</h5>
+      <ul>
+        <li>About Dubizzle Group</li>
+        <li>OLX Blog</li>
+        <li>Contact Us</li>
+        <li>OLX for Businesses</li>
+      </ul>
+    </div>
+    <div class="p4">
+      <h5>OLX</h5>
+      <ul>
+        <li>Help</li>
+        <li>Sitemap</li>
+        <li>Terms of use</li>
+        <li>Privacy Policy</li>
+      </ul>
+    </div>
+    <div class="p5">
+      <h4>FOLLOW US</h4>
+    </div>
+  </div>
+</div> -->
+<!-- footer ended -->
 </body>
 
 </html>
