--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="nav-2">
     <div class="location">
       <img src="images/loc-icon.svg" alt="" class="hover" />
-      <select style="width: 150px; -webkit-appearance: none;">
+      <select style="width: 150px; -webkit-appearance: none; appearance: none;">
         <option>Gurumandir, Karachi</option>
         <option>Tariq Road, Karachi</option>
         <option>Jamshed Road, Karachi</option>
